@@ -54,9 +54,9 @@ class TestSitemapGenerator(TestCase):
         sitemap = Sitemap(self.site)
         pages = sitemap.items()
 
-        self.assertIn(self.child_page.page_ptr, pages)
-        self.assertNotIn(self.unpublished_child_page.page_ptr, pages)
-        self.assertNotIn(self.protected_child_page.page_ptr, pages)
+        self.assertIn(self.child_page.page_ptr.specific, pages)
+        self.assertNotIn(self.unpublished_child_page.page_ptr.specific, pages)
+        self.assertNotIn(self.protected_child_page.page_ptr.specific, pages)
 
     def test_get_urls(self):
         request = RequestFactory().get('/sitemap.xml')
@@ -107,6 +107,34 @@ class TestSitemapGenerator(TestCase):
             if url['location'] == 'http://localhost/no-last-publish-date/'
         ][0]
         self.assertEqual(child_page_lastmod, datetime.datetime(2017, 2, 1, 12, 0, 0, tzinfo=pytz.utc))
+
+    def test_latest_lastmod(self):
+        # give the homepage a lastmod
+        self.home_page.last_published_at = datetime.datetime(2017, 3, 1, 12, 0, 0, tzinfo=pytz.utc)
+        self.home_page.save()
+
+        request = RequestFactory().get('/sitemap.xml')
+        req_protocol = request.scheme
+        req_site = get_current_site(request)
+
+        sitemap = Sitemap(self.site)
+        sitemap.get_urls(1, req_site, req_protocol)
+
+        self.assertEqual(sitemap.latest_lastmod, datetime.datetime(2017, 3, 1, 12, 0, 0, tzinfo=pytz.utc))
+
+    def test_latest_lastmod_missing(self):
+        # ensure homepage does not have lastmod
+        self.home_page.last_published_at = None
+        self.home_page.save()
+
+        request = RequestFactory().get('/sitemap.xml')
+        req_protocol = request.scheme
+        req_site = get_current_site(request)
+
+        sitemap = Sitemap(self.site)
+        sitemap.get_urls(1, req_site, req_protocol)
+
+        self.assertFalse(hasattr(sitemap, 'latest_lastmod'))
 
 
 class TestIndexView(TestCase):
